plugins {
    id 'net.minecraftforge.gradle' version '[6.0.24,6.2)'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = false
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    compileOnly fg.deobf("net.minecraftforge:forge:${minecraft_version}-${forge_version}")
}

jar {
    archiveBaseName.set("battleroyale")
    archiveVersion.set(mod_version)
    archiveClassifier.set("core")
}